# seminar-in-defensive-programming

./: README.md  seminar-presentation.pptx  ~$seminar-presentation.pptx  ~$ינר בתכנות מערכות דפנסיבי.docx  סמינר בתכנות מערכות דפנסיבי.docx
cpp-code-examples/: CMakeLists.txt  main.cpp
python-code-examples/examples/: class_usage.py  dict_usage.py  list_usage.py
python_vulnerability_example/: example_of_overriding.py  pickle_exploitation.py
seminar-program/cpp-client/src/: CMakeLists.txt  client.cpp
seminar-program/python-server/src/: setup.py
seminar-program/python-server/src/task_running_server/: actions.py  app.py
seminar-program/python-server/src/task_running_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
